k8s/deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: welcome-client
  namespace: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: welcome-client
  template:
    metadata:
      labels:
        app: welcome-client
    spec:
      containers:
        - name: welcome-client
          image: lucassandin/welcome-client:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: welcome-client-service
  namespace: frontend
spec:
  selector:
    app: welcome-client
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-client-host
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
    - host: client.34.68.243.59.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: welcome-client-service
                port:
                  number: 80
